# Lateryx

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  lateryx.config.example.yml  legendary_output.txt  pyproject.toml  requirements.txt
.agent/skills/lateryx-analyzer/: SKILL.md
.github/workflows/: lateryx.yml
docs/: documentation.html  index.html  script.js  styles.css
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
scripts/: pre-commit  pre-commit.bat
src/: __init__.py  auto_remediation.py  cli.py  cloud_sync.py  compliance.py  config.py  dev_server.py  iam_resolver.py  intelligence.py  kubernetes.py  main.py  multi_cloud.py  optimized_engine.py  plan_analyzer.py  scanner.py  trends.py
tests/: __init__.py  test_enterprise.py  test_legendary.py  test_validation.py
tests/scenarios/hacked/: main.tf
tests/scenarios/safe/: main.tf
