[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lateryx"
version = "1.3.0"
description = "Cloud Safety & Compliance on Autopilot - Automated security audits for infrastructure-as-code"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Lateryx Team", email = "security@lateryx.io"}
]
keywords = [
    "security",
    "infrastructure",
    "terraform",
    "compliance",
    "soc2",
    "hipaa",
    "devsecops",
    "graph-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "networkx>=3.2.1",
    "checkov>=3.1.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
]
aws = [
    "boto3>=1.28.0",
]
rich = [
    "rich>=13.0.0",
]

[project.scripts]
lateryx = "src:cli"

[project.urls]
Homepage = "https://github.com/RichardRajuChirayath/Lateryx"
Documentation = "https://richardrajuchirayath.github.io/Lateryx/"
Repository = "https://github.com/RichardRajuChirayath/Lateryx.git"
Issues = "https://github.com/RichardRajuChirayath/Lateryx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
